--- a/character-scraping.ipynb
+++ b/character-scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,30 @@
     "\n",
     "    dados = {}\n",
     "\n",
-    "    columns = [\"Nome em Japonês:\", \"Nome Romanizado:\", \"Nome em Português:\", \"Estreia:\", \"Afiliações:\", \"Ocupações:\", \"Epíteto:\", \"Local de Nascimento:\", \"Residência:\", \"Idade:\", \"Idade na Morte:\", \"Aniversário:\", \"Altura:\", \"Recompensa:\"]\n",
+    "    columns_character = {\n",
+    "        \"Nome em Japonês:\": \"nome_japones_personagem\",\n",
+    "        \"Nome Romanizado:\": \"nome_romanizado\",\n",
+    "        \"Nome em Português:\": \"nome_portugues\",\n",
+    "        \"Estreia:\": \"primeira_aparicao\",\n",
+    "        \"Afiliações:\": \"afiliações\",\n",
+    "        \"Ocupações:\": \"ocupacoes\",\n",
+    "        \"Epíteto:\": \"epiteto\",\n",
+    "        \"Local de Nascimento:\": \"local_nascimento\",\n",
+    "        \"Residência:\": \"residencia\",\n",
+    "        \"Idade:\": \"idade_atual\",\n",
+    "        \"Idade na Morte:\": \"idade_morte\",\n",
+    "        \"Aniversário:\": \"aniversario\",\n",
+    "        \"Altura:\": \"altura\"\n",
+    "    }\n",
+    "\n",
+    "    columns_akuma_no_mi = {\n",
+    "        \"Nome em Japonês\": \"akuma_no_mi_japones\",\n",
+    "        \"Nome em Português\": \"akuma_no_mi_portugues\",\n",
+    "        \"Significado:\": \"sig_akuma_no_mi\",\n",
+    "        \"Tipo:\": \"tipo_akuma_no_mi\"\n",
+    "    }\n",
+    "\n",
+    "\n",
     "\n",
     "    soup = BeautifulSoup(requests.get(url).content, \"html.parser\")\n",
     "    \n",
@@ -56,10 +79,18 @@
     "\n",
     "        for title in table_titles:\n",
     "            \n",
-    "            if title.text in columns:\n",
+    "            if title.text in columns_character:\n",
     "                \n",
+    "                column_name = columns_character[title.text]\n",
     "                value = title.find_next_sibling(\"div\")\n",
-    "                dados[title.text] = value.text.strip() \n",
+    "                dados[column_name] = value.text.strip() \n",
+    "\n",
+    "        recompensa = soup.find(\"span\", style=\"white-space:nowrap;\")  # Seleciona o primeiro span com estilo específico\n",
+    "        \n",
+    "        if first_bounty and first_bounty.next_sibling:\n",
+    "            dados[\"recompensa\"] = recompensa.next_sibling.strip()\n",
+    "        else:\n",
+    "            dados[\"recompensa\"] = None\n",
     "\n",
     "    akuma_no_mi_table = soup.find(\"tbody\")\n",
     "\n",
@@ -68,8 +99,10 @@
     "        table_titles = akuma_no_mi_table.find_all(\"span\", class_= \"pi-data-label pi-secondary-font\")\n",
     "\n",
     "        for title in table_titles:\n",
+    "\n",
+    "            column_name = columns_akuma_no_mi[title.text]\n",
     "            value = title.find_next_sibling(\"div\")\n",
-    "            dados[title.text] = value.text.strip()\n",
+    "            dados[column_name] = value.text.strip()\n",
     "\n",
     "    return dados \n",
     "    "
@@ -77,38 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Nome em Japonês:': 'モンキー・D・ルフィ',\n",
-       " 'Nome Romanizado:': 'Monkī Dī Rufi',\n",
-       " 'Nome em Português:': 'Monkey D. Luffy (Panini)',\n",
-       " 'Estreia:': 'Capítulo 1;[1] Episódio 1[2]',\n",
-       " 'Afiliações:': 'Piratas do Chapéu de Palha;Grande Frota do Chapéu de Palha;Quatro Imperadores;Clã dos D.;Família Dadan (anteriormente);Baratie (temporariamente, anteriormente);[3]Impel Down (anteriormente);Aliança Ninja-Pirata-Mink-Samurai (desfeita)',\n",
-       " 'Ocupações:': 'Capitão Pirata;[2]Imperador;[4]Grande Capitão da Grande Frota;Prisioneiro (anteriormente);Faz-Tudo (temporariamente, anteriormente);[3]Bandido (anteriormente)',\n",
-       " 'Local de Nascimento:': 'East Blue (Reino Goa)[1]',\n",
-       " 'Residência:': 'Vila Foosha (anteriormente);Monte Colubo (anteriormente);Rusukaina (anteriormente)',\n",
-       " 'Epíteto:': 'Luffy Chapéu de Palha (麦わらのルフィ, Mugiwara no Rufi?)[10] (Panini)',\n",
-       " 'Idade:': '7 (estreia);17 (pré-timeskip);[11]19 (pós-timeskip)[12][13]',\n",
-       " 'Aniversário:': '5 de Maio (Dia das Crianças no Japão)[14]',\n",
-       " 'Altura:': '0,91 m (estreia, criança)[6]1,72 m (pré-timeskip)[15]1,74 m (pós-timeskip)[12][13]',\n",
-       " 'Recompensa:': '3.000.000.000[17]1.500.000.000[18]500.000.000[19]400.000.000[20]300.000.000[21]100.000.000[22]30.000.000[23]',\n",
-       " 'Nome em Japonês': 'Gomu Gomu no Mi(Hito Hito no Mi, Modelo: Nika)',\n",
-       " 'Nome em Português': 'Fruta da BorrachaFruta do Humano, Modelo: NikaGomugomu-no-mi (Panini)(Hitohito-no-mi, Modelo \"Nika\")',\n",
-       " 'Significado:': 'Borracha; Humano; Nika',\n",
-       " 'Tipo:': 'Paramecia[24](Zoan Mítica)[25]'}"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'first_bounty' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcharacter_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://onepiece.fandom.com/pt/wiki/Monkey_D._Garp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[28], line 48\u001b[0m, in \u001b[0;36mcharacter_data\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m     44\u001b[0m         dados[column_name] \u001b[38;5;241m=\u001b[39m value\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip() \n\u001b[0;32m     46\u001b[0m recompensa \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspan\u001b[39m\u001b[38;5;124m\"\u001b[39m, style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhite-space:nowrap;\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Seleciona o primeiro span com estilo específico\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mfirst_bounty\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m first_bounty\u001b[38;5;241m.\u001b[39mnext_sibling:\n\u001b[0;32m     49\u001b[0m     dados[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrecompensa\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m recompensa\u001b[38;5;241m.\u001b[39mnext_sibling\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'first_bounty' is not defined"
+     ]
     }
    ],
    "source": [
-    "character_data(\"https://onepiece.fandom.com/pt/wiki/Monkey_D._Luffy\")"
+    "character_data(\"https://onepiece.fandom.com/pt/wiki/Monkey_D._Garp\")"
    ]
   },
   {
