--- a/character-scraping.ipynb
+++ b/character-scraping.ipynb
@@ -31,12 +31,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scraping Personagens"
+    "Character Data Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,27 +45,30 @@
     "    dados = {}\n",
     "\n",
     "    columns_character = {\n",
-    "        \"Nome em Japonês:\": \"nome_japones_personagem\",\n",
-    "        \"Nome Romanizado:\": \"nome_romanizado\",\n",
-    "        \"Nome em Português:\": \"nome_portugues\",\n",
-    "        \"Estreia:\": \"primeira_aparicao\",\n",
-    "        \"Afiliações:\": \"afiliações\",\n",
-    "        \"Ocupações:\": \"ocupacoes\",\n",
-    "        \"Epíteto:\": \"epiteto\",\n",
-    "        \"Local de Nascimento:\": \"local_nascimento\",\n",
-    "        \"Residência:\": \"residencia\",\n",
-    "        \"Idade:\": \"idade_atual\",\n",
-    "        \"Idade na Morte:\": \"idade_morte\",\n",
-    "        \"Aniversário:\": \"aniversario\",\n",
-    "        \"Altura:\": \"altura\"\n",
+    "        \"Name in Japanese:\": \"name_in_japanese\",\n",
+    "        \"Romanized Name:\": \"romanized_name\",\n",
+    "        \"Name in English:\": \"name_in_english\",\n",
+    "        \"First Appearance:\": \"first_appearance\",\n",
+    "        \"Affiliations:\": \"affiliations\",\n",
+    "        \"Occupations:\": \"occupations\",\n",
+    "        \"Epithet:\": \"epithet\",\n",
+    "        \"Place of Birth:\": \"place_of_birth\",\n",
+    "        \"Residence:\": \"residence\",\n",
+    "        \"Age:\": \"age\",\n",
+    "        \"Age at Death:\": \"age_at_death\",\n",
+    "        \"Birthday:\": \"birthday\",\n",
+    "        \"Height:\": \"height\",\n",
+    "        \"Bounty:\": \"bounty\"\n",
     "    }\n",
     "\n",
+    "\n",
     "    columns_akuma_no_mi = {\n",
-    "        \"Nome em Japonês\": \"akuma_no_mi_japones\",\n",
-    "        \"Nome em Português\": \"akuma_no_mi_portugues\",\n",
-    "        \"Significado:\": \"sig_akuma_no_mi\",\n",
-    "        \"Tipo:\": \"tipo_akuma_no_mi\"\n",
+    "    \"Name in Japanese\": \"akuma_no_mi_japanese\",\n",
+    "    \"Name in English\": \"akuma_no_mi_english\",\n",
+    "    \"Meaning:\": \"meaning_akuma_no_mi\",\n",
+    "    \"Type:\": \"type_akuma_no_mi\"\n",
     "    }\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -85,12 +88,7 @@
     "                value = title.find_next_sibling(\"div\")\n",
     "                dados[column_name] = value.text.strip() \n",
     "\n",
-    "        recompensa = soup.find(\"span\", style=\"white-space:nowrap;\")  # Seleciona o primeiro span com estilo específico\n",
-    "        \n",
-    "        if first_bounty and first_bounty.next_sibling:\n",
-    "            dados[\"recompensa\"] = recompensa.next_sibling.strip()\n",
-    "        else:\n",
-    "            dados[\"recompensa\"] = None\n",
+    "\n",
     "\n",
     "    akuma_no_mi_table = soup.find(\"tbody\")\n",
     "\n",
@@ -110,165 +108,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'first_bounty' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcharacter_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://onepiece.fandom.com/pt/wiki/Monkey_D._Garp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[28], line 48\u001b[0m, in \u001b[0;36mcharacter_data\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m     44\u001b[0m         dados[column_name] \u001b[38;5;241m=\u001b[39m value\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip() \n\u001b[0;32m     46\u001b[0m recompensa \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspan\u001b[39m\u001b[38;5;124m\"\u001b[39m, style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhite-space:nowrap;\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Seleciona o primeiro span com estilo específico\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mfirst_bounty\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m first_bounty\u001b[38;5;241m.\u001b[39mnext_sibling:\n\u001b[0;32m     49\u001b[0m     dados[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrecompensa\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m recompensa\u001b[38;5;241m.\u001b[39mnext_sibling\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'first_bounty' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "character_data(\"https://onepiece.fandom.com/pt/wiki/Monkey_D._Garp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Nome em Japonês:', 'Nome Romanizado:', 'Nome em Português:', 'Estreia:', 'Afiliações:', 'Ocupações:', 'Residência:', 'Epíteto:', 'Estado:', 'Idade na Morte:', 'Aniversário:', 'Altura:', 'Recompensa:', 'Voz Japonesa:']\n",
-      "['Nome em Japonês:', 'Nome Romanizado:', 'Nome em Português:', 'Estreia:', 'Afiliações:', 'Ocupações:', 'Local de Nascimento:', 'Residência:', 'Pseudônimo:', 'Epíteto:', 'Estado:', 'Idade:', 'Aniversário:', 'Altura:', 'Tipo Sanguíneo:', 'Recompensa:', 'Voz Japonesa:', 'Voz Brasileira (DPN Santos):', 'Voz Brasileira (UniDub):', 'Intérprete do Live-Action:', 'Voz Brasileira no Live-Action:', 'Nome em Japonês', 'Nome em Português:', 'Significado:', 'Tipo:']\n"
+      "{'romanized_name': 'Monkī Dī Rufi', 'affiliations': 'Straw Hat Pirates;Straw Hat Grand Fleet;Four Emperors;Clan of D.;Dadan Family (former);Baratie (temporary, former);[3]Impel Down (former);Ninja-Pirate-Mink-Samurai Alliance (disbanded)', 'occupations': 'Pirate Captain;[2] Emperor;[4] Senior Captain of the Grand Fleet; Prisoner (former); Chore Boy (temporary, former);[3] Bandit (former)', 'residence': 'Foosha Village (former);Mt. Colubo (former);Rusukaina (former)', 'epithet': 'Straw Hat Luffy (麦わらのルフィ, Mugiwara no Rufi?)[10]', 'age': '7 (debut);17 (pre-timeskip);[11]19 (after timeskip)[12][13]', 'birthday': \"May 5th (Children's Day)[14]\", 'height': '91 cm (3\\') (debut, child)[6]172 cm (5\\'8\") (pre-timeskip)[15]174 cm (5\\'9\") (after timeskip)[12][13]', 'bounty': '3,000,000,000[17]1,500,000,000[18]500,000,000[19]400,000,000[20]300,000,000[21]100,000,000[22]30,000,000[23]'}\n",
+      "{'romanized_name': 'Monkī Dī Gāpu', 'affiliations': 'Marines[2] (semi-retired);[3] Clan of D.', 'occupations': 'Vice Admiral;[4][3] Instructor[5]', 'residence': 'Foosha Village (former)', 'epithet': '\"Garp the Fist\" (ゲンコツのガープ, Genkotsu no Gāpu?);[7]Hero of the Marines (海軍の英雄, Kaigun no Eiyū?) (VIZ: \"Naval Hero\");[7][8]', 'age': '76 (debut)78 (after timeskip)[9]', 'birthday': 'May 2nd[10]', 'height': '287 cm (9\\'5\")[6]', 'bounty': '(3,000,000,000)[11]'}\n"
      ]
     }
    ],
    "source": [
-    "url = \"https://onepiece.fandom.com/pt/wiki/Kozuki_Oden\"\n",
+    "print(character_data(\"https://onepiece.fandom.com/wiki/Monkey_D._Luffy\"))\n",
     "\n",
-    "url_list = [\"https://onepiece.fandom.com/pt/wiki/Kozuki_Oden\", \"https://onepiece.fandom.com/pt/wiki/Monkey_D._Luffy\"]\n",
-    "\n",
-    "for character in url_list:\n",
-    "    print(character_data(character))\n"
+    "print(character_data(\"https://onepiece.fandom.com/wiki/Monkey_D._Garp\"))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nome em Japonês:</th>\n",
-       "      <th>Nome Romanizado:</th>\n",
-       "      <th>Nome em Português:</th>\n",
-       "      <th>Estreia:</th>\n",
-       "      <th>Afiliações:</th>\n",
-       "      <th>Ocupações:</th>\n",
-       "      <th>Residência:</th>\n",
-       "      <th>Epíteto:</th>\n",
-       "      <th>Estado:</th>\n",
-       "      <th>Idade na Morte:</th>\n",
-       "      <th>Aniversário:</th>\n",
-       "      <th>Altura:</th>\n",
-       "      <th>Recompensa:</th>\n",
-       "      <th>Voz Japonesa:</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Nome em Japonês:, Nome Romanizado:, Nome em Português:, Estreia:, Afiliações:, Ocupações:, Residência:, Epíteto:, Estado:, Idade na Morte:, Aniversário:, Altura:, Recompensa:, Voz Japonesa:]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url = \"https://onepiece.fandom.com/pt/wiki/Kozuki_Oden\"\n",
-    "\n",
-    "soup = BeautifulSoup(requests.get(url).content, \"html.parser\")\n",
-    "\n",
-    "table_titles = soup.find_all(\"h3\", class_= \"pi-data-label pi-secondary-font\")\n",
-    "\n",
-    "titles = [title.text for title in table_titles]\n",
-    "\n",
-    "pd.DataFrame(columns=titles)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"23161aeb27d0b5c159cbf4f7433bf5bc\", element=\"f.3E46A6AE58C6680E8C1B820B76AB2ACB.d.FAAB525EBEED70232804906EB91565F4.e.173\")>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url = \"https://onepiece.fandom.com/wiki/List_of_Canon_Characters\"\n",
-    "\n",
-    "driver = webdriver.Chrome()\n",
-    "driver.get(url)\n",
-    "\n",
-    "WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.TAG_NAME, \"table\")))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url= \"https://onepiece.fandom.com/wiki/List_of_Canon_Characters\"\n",
-    "\n",
-    "html_text = requests.get(url)\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
